[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "example"
path = "src/lib.rs"


[dependencies]
noodles = { version = "0.54.0", features = ["vcf", "bcf", "core"] }
noodles-util = {version = "0.26.0", features = ["variant"] }
