[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# make a bin
[[bin]]
name = "expr"
path = "src/main.rs"

[dependencies]
mlua = { version = "0.9.7", features = ["luau", "send", "parking_lot"] }
parking_lot = { version = "0.12.1", features = ["arc_lock"] }
rust-htslib = { version = "0.46.0", features = ["libdeflate", "static"] }
